harness/test/errors/003_free_var_arg.eu
#!/usr/bin/env eu

z(s) : s

# xs free:
f: z(xs)
